udpate z-index - try and fix partners

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -447,6 +447,7 @@ opacity: 1;
   width: 100%;
   margin-left: 0;
   margin-bottom: 0.5rem;
+  z-index: 100;
 }
 
 .partners svg {
